change struct name in dto
