# docs/swagger.json
@@ -32,7 +32,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.NumAgreedTasksDTO"
+                            "$ref": "#/definitions/dto.NumAgreedTasksResponse"
                         }
                     },
                     "500": {
@@ -64,7 +64,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.NumRejectedTaskDTO"
+                            "$ref": "#/definitions/dto.NumRejectedTaskResponse"
                         }
                     },
                     "500": {
@@ -96,7 +96,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.TotalTimeDTO"
+                            "$ref": "#/definitions/dto.TotalTimeResponse"
                         }
                     },
                     "500": {
@@ -127,7 +127,7 @@
         }
     },
     "definitions": {
-        "dto.NumAgreedTasksDTO": {
+        "dto.NumAgreedTasksResponse": {
             "type": "object",
             "properties": {
                 "num_agreed_tasks": {
@@ -135,7 +135,7 @@
                 }
             }
         },
-        "dto.NumRejectedTaskDTO": {
+        "dto.NumRejectedTaskResponse": {
             "type": "object",
             "properties": {
                 "num_rejected_tasks": {
@@ -143,7 +143,7 @@
                 }
             }
         },
-        "dto.TotalTimeDTO": {
+        "dto.TotalTimeResponse": {
             "type": "object",
             "properties": {
                 "total_time": {
