# internal/adapters/http/dto/clientModels.go
@@ -1,13 +1,13 @@
 package dto
 
-type NumAgreedTasksDTO struct {
+type NumAgreedTasksResponse struct {
 	Num int `json:"num_agreed_tasks"`
 }
 
-type NumRejectedTaskDTO struct {
+type NumRejectedTaskResponse struct {
 	Num int `json:"num_rejected_tasks"`
 }
 
-type TotalTimeDTO struct {
+type TotalTimeResponse struct {
 	Time string `json:"total_time"`
 }
